animations when moving around

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Levels/TechDemo4
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2023.11.30-20.53.21
+MyProject2.TimeStamp=2023.12.17-12.46.50
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1011,7 +1011,7 @@ BlueprintGraph.TimeStamp=2023.03.31-12.10.59
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1622,7 +1622,7 @@ Shooter_GameMode_BP_C.Classes=True
 Shooter_GameMode_BP_C.Game=True
 Shooter_GameMode_BP_C.GameMode=True
 BP_MyPlayer1_C.Character=True
-BP_MyPlayer1_C.Tick=True
+BP_MyPlayer1_C.Tick=False
 BP_MyPlayer1_C.Camera=True
 BP_MyPlayer1_C.Pawn=True
 BP_MyPlayer1_C.Replication=True
@@ -1730,6 +1730,50 @@ AnimSequence.File Path=True
 AnimSequence.CustomAttributes=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+BlendSpace.InputInterpolation=True
+BlendSpace.Axis Settings=True
+BlendSpace.AdditiveSettings=True
+BlendSpace.Animation=True
+BlendSpace.SampleInterpolation=True
+BlendSpace.AnimationNotifies=True
+BlendSpace.MetaData=True
+BlendSpace.Thumbnail=True
+BlendSpace.BlendSamples=True
+ABP_Soldier_C.RootMotion=True
+ABP_Soldier_C.Notifies=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+PropertyWrapper.Events=True
+BP_MyPlayer1_C.LOD=False
+BP_MyPlayer1_C.Cooking=True
+CharacterMovementComponent.AssetUserData=True
+CharacterMovementComponent.Collision=True
+SkeletalMeshComponent.SkeletalMesh=False
+SkeletalMeshComponent.Optimization=False
+SkeletalMeshComponent.MaterialParameters=False
+SkeletalMeshComponent.HLOD=False
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1749,6 +1793,16 @@ Light=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
+CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=780.000
@@ -1942,19 +1996,30 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,
+BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Shooter_GameMode_BP
-MRUItem1=/Game/BP_MyPlayer1
-MRUItem2=/Game/Levels/TechDemo4
-MRUItem3=/Game/PlayerStuff/Ch15_nonPBR_Anim_mixamo_com
-MRUItem4=/Game/PlayerStuff/Ch15_nonPBR_Anim_Take_001
-MRUItem5=/Game/ShooterGame
-MRUItem6=/Game/StarterContent/Maps/MyLevel
-MRUItem7=/Game/StarterContent/Maps/Minimal_Default
-MRUItem8=/Game/Levels/Level1
-MRUItem9=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem10=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/PlayerStuff/SoldierBlendSpace
+MRUItem1=/Game/PlayerStuff/Ch15_nonPBR
+MRUItem2=/Game/BP_MyPlayer1
+MRUItem3=/Game/ABP_Soldier
+MRUItem4=/Game/PlayerStuff/walking
+MRUItem5=/Game/PlayerStuff/start_walking
+MRUItem6=/Game/PlayerStuff/walking_backwards
+MRUItem7=/Game/PlayerStuff/stop_walking
+MRUItem8=/Game/PlayerStuff/run_backwards
+MRUItem9=/Game/PlayerStuff/firing_rifle
+MRUItem10=/Game/PlayerStuff/rifle_run
+MRUItem11=/Game/PlayerStuff/strafe__2_
+MRUItem12=/Game/PlayerStuff/strafe
+MRUItem13=/Game/PlayerStuff/jump_forward
+MRUItem14=/Game/Levels/TechDemo4
+MRUItem15=/Game/Shooter_GameMode_BP
+MRUItem16=/Game/PlayerStuff/Ch15_nonPBR_Anim_mixamo_com
+MRUItem17=/Game/PlayerStuff/Ch15_nonPBR_Anim_Take_001
+MRUItem18=/Game/ShooterGame
+MRUItem19=/Game/StarterContent/Maps/MyLevel
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2158,4 +2223,14 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [AssetEditorToolkitTabLocation]
 /Game/Shooter_GameMode_BP.Shooter_GameMode_BP=0
+/Game/PlayerStuff/rifle_run.rifle_run=1
+/Game/PlayerStuff/strafe__2_.strafe__2_=1
+/Game/PlayerStuff/jump_forward.jump_forward=1
+/Game/PlayerStuff/strafe.strafe=1
+/Game/BP_MyPlayer1.BP_MyPlayer1=1
+/Game/PlayerStuff/walking.walking=1
+/Game/PlayerStuff/walking_backwards.walking_backwards=1
+/Game/PlayerStuff/firing_rifle.firing_rifle=1
+/Game/PlayerStuff/start_walking.start_walking=1
+/Game/PlayerStuff/SoldierBlendSpace.SoldierBlendSpace=1
 
