--- a/MyProject2/Config/DefaultEngine.ini
+++ b/MyProject2/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Game/Shooter_GameMode_BP.Shooter_GameMode_BP_C
+TwoPlayerSplitscreenLayout=Vertical
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
