split screen sorted. player health initialised on start

--- a/MyProject2/Config/DefaultEngine.ini
+++ b/MyProject2/Config/DefaultEngine.ini
@@ -7,6 +7,8 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Game/Shooter_GameMode_BP.Shooter_GameMode_BP_C
 TwoPlayerSplitscreenLayout=Vertical
+bOffsetPlayerGamepadIds=True
+bUseSplitscreen=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
