--- a/MyProject2/Config/DefaultInput.ini
+++ b/MyProject2/Config/DefaultInput.ini
@@ -81,6 +81,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CustomKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +ActionMappings=(ActionName="PlayerAim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="PlayerShoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button2)
++ActionMappings=(ActionName="PlayerAim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button7)
++ActionMappings=(ActionName="PlayerShoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button8)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
@@ -91,9 +94,17 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=GenericUSBController_Axis5)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=GenericUSBController_Axis6)
++AxisMappings=(AxisName="Turn",Scale=1.000000,Key=GenericUSBController_Axis4)
++AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=GenericUSBController_Axis3)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
+[/Script/RawInput.RawInputSettings]
++DeviceConfigurations=(VendorID="",ProductID="",AxisProperties=((Key=GenericUSBController_Axis1),(Key=GenericUSBController_Axis2),(Key=GenericUSBController_Axis3,bGamepadStick=True),(Key=GenericUSBController_Axis4,bGamepadStick=True),(Key=GenericUSBController_Axis5,bInverted=True,bGamepadStick=True),(Key=GenericUSBController_Axis6,bGamepadStick=True),(Key=GenericUSBController_Axis7),(Key=GenericUSBController_Axis8)),ButtonProperties=((Key=GenericUSBController_Button1),(Key=GenericUSBController_Button2),(Key=GenericUSBController_Button2),(Key=GenericUSBController_Button4),(Key=GenericUSBController_Button5),(Key=GenericUSBController_Button6),(Key=GenericUSBController_Button7),(Key=GenericUSBController_Button8),(Key=GenericUSBController_Button9),(Key=GenericUSBController_Button10),(Key=GenericUSBController_Button11),(Key=GenericUSBController_Button12),(Key=GenericUSBController_Button13),(Key=GenericUSBController_Button14),(Key=GenericUSBController_Button15),(Key=GenericUSBController_Button16),(Key=GenericUSBController_Button17),(Key=GenericUSBController_Button18),(Key=GenericUSBController_Button19),(Key=GenericUSBController_Button20)))
+bRegisterDefaultDevice=True
 
