--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=640
 NewWindowHeight=480
 MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=792,Y=291)
+MultipleInstancePositions=(X=1912,Y=-8)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -133,8 +133,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Levels/TechDemo4
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2023.12.20-14.56.08
-MyProject2.LastCompileMethod=Runtime
+MyProject2.TimeStamp=2023.12.21-14.52.59
+MyProject2.LastCompileMethod=External
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2023.03.31-12.12.09
@@ -1957,6 +1957,35 @@ EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
 EditorKeyboardShortcutSettings.MyBlueprint=True
 EditorKeyboardShortcutSettings.BlueprintPalette=True
 EditorKeyboardShortcutSettings.SCSEditorViewport=True
+MainHUD_C.Appearance=True
+MainHUD_C.Designer=True
+MainHUD_C.Input=True
+MainHUD_C.Interaction=True
+MainHUD_C.Performance=True
+MainHUD_C.Layout=True
+MainHUD_C.Behavior=True
+MainHUD_C.Render Transform=True
+MainHUD_C.Accessibility=True
+MainHUD_C.Clipping=True
+MainHUD_C.Navigation=True
+MainHUD_C.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_MyPlayer1_C.Widgets=True
+MyMyShooterGameMode_C.Tick=True
+MyMyShooterGameMode_C.Classes=True
+MyMyShooterGameMode_C.Game=True
+MyMyShooterGameMode_C.GameMode=True
+MyMyShooterGameMode_C.Widgets=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1969,6 +1998,7 @@ UserInterfaceSettings=True
 RawInputSettings=True
 ProjectPackagingSettings=True
 LevelEditorPlaySettings=True
+GameplayTagsSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1999,6 +2029,10 @@ K2Node=
 EdGraphNode=
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
 DeveloperSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [RootWindow]
 ScreenPosition=X=-640.000 Y=780.000
@@ -2211,25 +2245,25 @@ TakeRecorderWorldSourceSettings=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Shooter_GameMode_BP
-MRUItem1=/Game/BP_MyPlayer1
-MRUItem2=/Game/Levels/TechDemo4
-MRUItem3=/Game/MyPlayer2
-MRUItem4=/Game/AimOffset
-MRUItem5=/Game/BP_MyPlayer2
-MRUItem6=/Game/Player2
-MRUItem7=/Game/PlayerStuff/Offset_AIM_Up
-MRUItem8=/Game/PlayerStuff/Offset_AIM_Down
-MRUItem9=/Game/ABP_Soldier
-MRUItem10=/Game/PlayerStuff/Offset_AIM
-MRUItem11=/Game/PlayerStuff/AIMING
-MRUItem12=/Game/PlayerStuff/NEWFIRING
-MRUItem13=/Game/PlayerStuff/firing_rifle
-MRUItem14=/Game/PlayerStuff/rifle_aiming_idle
-MRUItem15=/Game/PlayerStuff/FIRING
-MRUItem16=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
-MRUItem17=/Game/PlayerStuff/SoldierBlendSpace
-MRUItem18=/Game/PlayerStuff/sprint_forward
-MRUItem19=/Game/PlayerStuff/jump_forward
+MRUItem1=/Game/SharedHUDWidget
+MRUItem2=/Game/MyMyShooterGameMode
+MRUItem3=/Game/Levels/TechDemo4
+MRUItem4=/Game/BP_MyPlayer1
+MRUItem5=/Game/MainHUD
+MRUItem6=/Game/MyPlayer2
+MRUItem7=/Game/AimOffset
+MRUItem8=/Game/BP_MyPlayer2
+MRUItem9=/Game/Player2
+MRUItem10=/Game/PlayerStuff/Offset_AIM_Up
+MRUItem11=/Game/PlayerStuff/Offset_AIM_Down
+MRUItem12=/Game/ABP_Soldier
+MRUItem13=/Game/PlayerStuff/Offset_AIM
+MRUItem14=/Game/PlayerStuff/AIMING
+MRUItem15=/Game/PlayerStuff/NEWFIRING
+MRUItem16=/Game/PlayerStuff/firing_rifle
+MRUItem17=/Game/PlayerStuff/rifle_aiming_idle
+MRUItem18=/Game/PlayerStuff/FIRING
+MRUItem19=/Game/PlayerStuff/Ch15_nonPBR_Skeleton
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2466,7 +2500,81 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 /Game/PlayerStuff/Offset_AIM_Down.Offset_AIM_Down=1
 /Game/AimOffset.AimOffset=1
 /Game/Levels/TechDemo4.TechDemo4:PersistentLevel.TechDemo4=0
+/Game/MyMyShooterGameMode.MyMyShooterGameMode=0
+/Game/SharedHUDWidget.SharedHUDWidget=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
