timer added to HUD

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2023.12.27-13.00.09
+MyProject2.TimeStamp=2023.12.30-09.42.05
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1022,6 +1022,8 @@ PinnedCommandList.TimeStamp=2023.03.31-12.11.02
 PinnedCommandList.LastCompileMethod=Unknown
 RawInput.TimeStamp=2023.03.31-12.12.12
 RawInput.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.03.31-12.11.03
+SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2134,7 +2136,7 @@ GameplayTagsSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2163,8 +2165,8 @@ RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object
 DeveloperSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[2]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[3]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[4]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[5]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[1]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[6]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].ButtonProperties.ButtonProperties[7]\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-Widget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
-Visual="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
 WidgetComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
 MAINHUD_NEW_C="\"Object.Layout.Slot\" "
@@ -2387,11 +2389,11 @@ K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_MyPlayer1
+MRUItem0=/Game/MAINHUD_NEW
 MRUItem1=/Game/Levels/TechDemo4
-MRUItem2=/Game/AimingBeam
-MRUItem3=/Game/PLAYERHUD
-MRUItem4=/Game/MAINHUD_NEW
+MRUItem2=/Game/BP_MyPlayer1
+MRUItem3=/Game/AimingBeam
+MRUItem4=/Game/PLAYERHUD
 MRUItem5=/Game/Blueprints/AimingBeam
 MRUItem6=/Game/PlayerStuff/Offset_AIM_Down
 MRUItem7=/Game/PlayerStuff/SoldierBlendSpace
@@ -2428,7 +2430,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=CompilerResultsLog
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
