been trying to access niagara component

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2023.12.30-09.42.05
+MyProject2.TimeStamp=2023.12.30-10.47.14
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1024,6 +1024,8 @@ RawInput.TimeStamp=2023.03.31-12.12.12
 RawInput.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2023.03.31-12.11.03
 SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.03.31-12.11.01
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2136,7 +2138,7 @@ GameplayTagsSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
+Object="\"Object.Collision.BodyInstance\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2260,12 +2262,13 @@ Level=../../../../../../Users/Matth/Documents/YEAR 2/MyProject2/Content/
 Project=C:/Program Files/Epic Games/UE_4.27/
 
 [MRU]
-MRUItem0=/Game/Levels/TechDemo4
-MRUItem1=/Game/StarterContent/Maps/MyLevel
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default
-MRUItem3=/Game/Levels/Level1
-MRUItem4=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/Levels/TechDemo4Level1
+MRUItem1=/Game/Levels/TechDemo4
+MRUItem2=/Game/StarterContent/Maps/MyLevel
+MRUItem3=/Game/StarterContent/Maps/Minimal_Default
+MRUItem4=/Game/Levels/Level1
+MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem6=/Game/StarterContent/Maps/StarterMap
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2389,9 +2392,9 @@ K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MAINHUD_NEW
+MRUItem0=/Game/BP_MyPlayer1
 MRUItem1=/Game/Levels/TechDemo4
-MRUItem2=/Game/BP_MyPlayer1
+MRUItem2=/Game/MAINHUD_NEW
 MRUItem3=/Game/AimingBeam
 MRUItem4=/Game/PLAYERHUD
 MRUItem5=/Game/Blueprints/AimingBeam
