laser goes on and off and FOV changes

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,10 +131,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/TechDemo4
+LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2023.12.30-10.47.14
+MyProject2.TimeStamp=2023.12.30-11.53.07
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1028,7 +1028,7 @@ HierarchicalLODUtilities.TimeStamp=2023.03.31-12.11.01
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -2122,6 +2122,20 @@ NiagaraComponent.Tags=True
 NiagaraComponent.ComponentReplication=True
 NiagaraComponent.Cooking=True
 NiagaraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2138,7 +2152,7 @@ GameplayTagsSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 RectLight="\"Object.Light.RectLightComponent.Object.Light.LightColor\" "
@@ -2150,12 +2164,12 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
@@ -2392,26 +2406,26 @@ K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_MyPlayer1
-MRUItem1=/Game/Levels/TechDemo4
+MRUItem0=/Game/PlayerStuff/Ch15_nonPBR
+MRUItem1=/Game/AimingBeam
 MRUItem2=/Game/MAINHUD_NEW
-MRUItem3=/Game/AimingBeam
-MRUItem4=/Game/PLAYERHUD
-MRUItem5=/Game/Blueprints/AimingBeam
-MRUItem6=/Game/PlayerStuff/Offset_AIM_Down
-MRUItem7=/Game/PlayerStuff/SoldierBlendSpace
-MRUItem8=/Game/MyMyShooterGameMode
-MRUItem9=/Game/Shooter_GameMode_BP
-MRUItem10=/Game/SharedHUDWidget
-MRUItem11=/Game/MainHUD
-MRUItem12=/Game/MyPlayer2
-MRUItem13=/Game/AimOffset
-MRUItem14=/Game/BP_MyPlayer2
-MRUItem15=/Game/Player2
-MRUItem16=/Game/PlayerStuff/Offset_AIM_Up
-MRUItem17=/Game/ABP_Soldier
-MRUItem18=/Game/PlayerStuff/Offset_AIM
-MRUItem19=/Game/PlayerStuff/AIMING
+MRUItem3=/Game/BP_MyPlayer1
+MRUItem4=/Game/Levels/TechDemo4Level1
+MRUItem5=/Game/Levels/TechDemo4
+MRUItem6=/Game/PLAYERHUD
+MRUItem7=/Game/Blueprints/AimingBeam
+MRUItem8=/Game/PlayerStuff/Offset_AIM_Down
+MRUItem9=/Game/PlayerStuff/SoldierBlendSpace
+MRUItem10=/Game/MyMyShooterGameMode
+MRUItem11=/Game/Shooter_GameMode_BP
+MRUItem12=/Game/SharedHUDWidget
+MRUItem13=/Game/MainHUD
+MRUItem14=/Game/MyPlayer2
+MRUItem15=/Game/AimOffset
+MRUItem16=/Game/BP_MyPlayer2
+MRUItem17=/Game/Player2
+MRUItem18=/Game/PlayerStuff/Offset_AIM_Up
+MRUItem19=/Game/ABP_Soldier
 
 [PlacementMode]
 RecentlyPlaced=/Game/AimingBeam.AimingBeam;
@@ -2433,7 +2447,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2618,6 +2632,8 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [AssetEditorToolkitTabLocation]
 /Game/Shooter_GameMode_BP.Shooter_GameMode_BP=0
@@ -2655,6 +2671,7 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 /Game/AimingBeam.AimingBeam=1
 /Game/Blueprints/AimingBeam.AimingBeam=1
 /Game/PLAYERHUD.PLAYERHUD=1
+/Game/PlayerStuff/Ch15_nonPBR.Ch15_nonPBR=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
