raycast works on player and can do basic damage

--- a/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Levels/TechDemo4Level1
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.01.02-10.50.43
+MyProject2.TimeStamp=2024.01.02-16.15.53
 MyProject2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.31-12.12.07
 PakFile.LastCompileMethod=Unknown
@@ -1028,7 +1028,7 @@ HierarchicalLODUtilities.TimeStamp=2023.03.31-12.11.01
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -2149,6 +2149,7 @@ RawInputSettings=True
 ProjectPackagingSettings=True
 LevelEditorPlaySettings=True
 GameplayTagsSettings=True
+CollisionProfile=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2406,9 +2407,9 @@ K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 PlayerCameraManager=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MAINHUD_NEW
+MRUItem0=/Game/Levels/TechDemo4Level1
 MRUItem1=/Game/BP_MyPlayer1
-MRUItem2=/Game/Levels/TechDemo4Level1
+MRUItem2=/Game/MAINHUD_NEW
 MRUItem3=/Game/PlayerStuff/Ch15_nonPBR
 MRUItem4=/Game/AimingBeam
 MRUItem5=/Game/Levels/TechDemo4
@@ -2447,7 +2448,7 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=CompilerResultsLog
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
